tests/PHPStan/DependencyInjection/invalidIgnoreErrors/count-without-path.neon
parameters:
	ignoreErrors:
		-
			message: '#One#'
			count: 3
